Fixed layout issue

--- a/src/components/layout/root-layout/RootLayout.module.scss
+++ b/src/components/layout/root-layout/RootLayout.module.scss
@@ -5,3 +5,7 @@
 .app_spinner {
   top: 10%;
 }
+
+.side_bar_open {
+  width: calc(100% - 318px);
+}
